--- a/views/comatose_admin/new.html.erb
+++ b/views/comatose_admin/new.html.erb
@@ -2,4 +2,4 @@
   New Page
 </h1>
 
-<%= render :partial=>'form', :locals=>{:mode=>:new} %>
+<%= render :partial => 'comatose_admin/form', :locals=>{:mode=>:new} %>
