--- a/views/comatose_admin/edit.html.erb
+++ b/views/comatose_admin/edit.html.erb
@@ -2,4 +2,4 @@
   Edit Page
 </h1>
 
-<%= render :partial=>'form', :locals=>{:mode=>:edit} %>
+<%= render :partial => 'comatose_admin/form', :locals=>{:mode=>:edit} %>
