--- a/views/layouts/comatose_admin.html.erb
+++ b/views/layouts/comatose_admin.html.erb
@@ -2,9 +2,11 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html class="noscript" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=<%= Comatose.config.content_type %>"/>
+    <meta http-equiv="Content-Type"        content="text/html; charset=<%= Comatose.config.content_type %>"/>
+    <meta http-equiv="Content-Style-Type"  content="text/css" />
+    <meta http-equiv="Content-Script-Type" content="application/javascript" />
     <title>Comatose Admin</title>
-    <style>
+    <style type="text/css">
 BODY {
   background: #DDD;
   margin: 0px 100px;
@@ -82,8 +84,8 @@ BODY {
   position: fixed;
   right: 75px;
   border: 3px solid gray !important;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
+/*  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;*/
   background: #FFF;
   padding: 15px;
 }
@@ -287,10 +289,10 @@ BODY {
   text-align: right;
   color: gray;
 }
-#content #preview-area .commands A{
+#content #preview-area .commands A {
   color: gray;
 }
-#content #preview-area .commands A:hover{
+#content #preview-area .commands A:hover {
   color: black;
 }
 #content .revisions {
@@ -412,7 +414,8 @@ BODY {
 
 </style>
     <%= javascript_include_tag :defaults %>
-    <script>
+    <script type="application/javascript">
+/* <![CDATA[ */
 // CSS Browser Selector   v0.2.3b (M@: added noscript support)
 // Documentation:         http://rafael.adm.br/css_browser_selector
 // License:               http://creativecommons.org/licenses/by/2.5/
@@ -814,7 +817,7 @@ if(!window.Cookie)
       destroyAll: Cookie.eraseAll
     });
   })();
-
+/* ]]> */
 </script>
   </head>
   <body>
@@ -830,7 +833,7 @@ if(!window.Cookie)
         <%= yield %>
       </div>
       <div id="footer">
-        Powered by <a href="http://comatose.rubyforge.org" target="_new_window">Comatose <%= Comatose::VERSION_STRING %></a>, created by <a href="http://www.mattmccray.com"  target="_new_window">M@ McCray</a>.
+        Powered by <a href="http://comatose.rubyforge.org" target="_blank">Comatose <%= Comatose::VERSION_STRING %></a>, created by <a href="http://www.mattmccray.com"  target="_blank">M@ McCray</a>.
       </div>
     </div>
   </body>
