--- a/views/layouts/comatose_admin_customize.html.erb
+++ b/views/layouts/comatose_admin_customize.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html class="noscript" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=<%= Comatose.config.content_type %>"/>
     <title>Comatose Admin</title>
@@ -8,7 +8,7 @@
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag 'comatose_admin' %>
   </head>
-  <body>
+  <body class="noscript">
     <div id="page-container">
       <div id="header">
         <h1><%= link_to Comatose.config.admin_title, :controller=>controller.controller_name, :action=>'index' %></h1>
@@ -21,7 +21,7 @@
         <%= yield %>
       </div>
       <div id="footer">
-        Powered by <a href="http://comatose.rubyforge.org" target="_new_window">Comatose <%= Comatose::VERSION_STRING %></a>, created by <a href="http://www.mattmccray.com"  target="_new_window">M@ McCray</a>.
+        Powered by <a href="http://comatose.rubyforge.org" target="_blank">Comatose <%= Comatose::VERSION_STRING %></a>, created by <a href="http://www.mattmccray.com"  target="_blank">M@ McCray</a>.
       </div>
     </div>
   </body>
