--- a/views/layouts/comatose_admin_customize.html.erb
+++ b/views/layouts/comatose_admin_customize.html.erb
@@ -3,7 +3,7 @@
 <html class="noscript" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=<%= Comatose.config.content_type %>"/>
-    <title>Comatose Admin</title>
+    <title><%= Comatose.config.admin_title || 'Comatose Admin' %></title>
     <%= stylesheet_link_tag 'comatose_admin' %>
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag 'comatose_admin' %>
