--- a/views/layouts/comatose_admin.html.erb
+++ b/views/layouts/comatose_admin.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=<%= Comatose.config.content_type %>"/>
     <title>Comatose Admin</title>
     <%= stylesheet_link_tag "comatose_admin" %>
-    <%= javascript_include_tag "comatose_admin", :defaults %>
+    <%= javascript_include_tag :defaults, "comatose_admin" %>
     <script>
 </script>
   </head>
